--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
         appCompatVersion = "1.1.0-alpha04"
         recyclerVersion = "1.1.0-alpha04"
         materialVersion = "1.1.0-alpha05"
-        navigationVersion = "2.0.0"
+        navigationVersion = "2.1.0-alpha05"
         constraintLayoutVersion = "2.0.0-alpha4"
     }
 
@@ -37,6 +37,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
     }
 }
 
